Fix example grammar

--- a/code_challenges.ipynb
+++ b/code_challenges.ipynb
@@ -41,7 +41,7 @@
     "Example:\n",
     "\n",
     "`input: 0, 1, 2\n",
-    "output: '[Twas', 'brillig', 'and']`"
+    "output: ['Twas', 'brillig', 'and']`"
    ]
   },
   {
