Add odd_sum challenge

--- a/code_challenges.ipynb
+++ b/code_challenges.ipynb
@@ -15,11 +15,11 @@
    "metadata": {},
    "source": [
     "### 2. Jabberwocky I\n",
-    "Write a program to return a string of three `|`-separated, 10 character sub-sequences from the following text, starting at the specified indices:\n",
+    "Write a program to return a string of three `|`-separated, 10 character sub-sequences from the following text, starting at a set of integer indices:\n",
     "\n",
     "`’Twasbrillig,andtheslithytovesDidgyreandgimbleinthewabe:Allmimsyweretheborogoves,Andthemomerathsoutgrabe.“BewaretheJabberwock,myson!Thejawsthatbite,theclawsthatcatch!BewaretheJubjubbird,andshunThefrumiousBandersnatch!”Hetookhisvorpalswordinhand;Longtimethemanxomefoehesought—SorestedhebytheTumtumtreeAndstoodawhileinthought.And,asinuffishthoughthestood,TheJabberwock,witheyesofflame,Camewhifflingthroughthetulgeywood,Andburbledasitcame!One,two!One,two!AndthroughandthroughThevorpalbladewentsnicker-snack!Heleftitdead,andwithitsheadHewentgalumphingback.“AndhastthouslaintheJabberwock?Cometomyarms,mybeamishboy!Ofrabjousday!Callooh!Callay!”Hechortledinhisjoy.’Twasbrillig,andtheslithytovesDidgyreandgimbleinthewabe:Allmimsyweretheborogoves,Andthemomerathsoutgrabe.`\n",
     "\n",
-    "`115, 356, 572`\n",
+    "Test input: `115, 356, 572`\n",
     "\n",
     "Example:\n",
     "\n",
@@ -32,16 +32,32 @@
    "metadata": {},
    "source": [
     "### 3. Jabberwocky II\n",
-    "Write a program to return the words of the following poem at the following indices (without punctuation):\n",
+    "Write a program to return the words of the following poem at a set of indices (without punctuation):\n",
     "\n",
     "`’Twas brillig, and the slithy toves Did gyre and gimble in the wabe: All mimsy were the borogoves, And the mome raths outgrabe. “Beware the Jabberwock, my son! The jaws that bite, the claws that catch! Beware the Jubjub bird, and shun The frumious Bandersnatch!” He took his vorpal sword in hand; Long time the manxome foe he sought— So rested he by the Tumtum tree And stood awhile in thought. And, as in uffish thought he stood, The Jabberwock, with eyes of flame, Came whiffling through the tulgey wood, And burbled as it came! One, two! One, two! And through and through The vorpal blade went snicker-snack! He left it dead, and with its head He went galumphing back. “And hast thou slain the Jabberwock? Come to my arms, my beamish boy! O frabjous day! Callooh! Callay!” He chortled in his joy. ’Twas brillig, and the slithy toves Did gyre and gimble in the wabe: All mimsy were the borogoves, And the mome raths outgrabe.'`\n",
     "\n",
-    "`44, 88, 131`\n",
+    "Test input: `44, 88, 131`\n",
     "\n",
     "Example:\n",
     "\n",
     "`input: 0, 1, 2\n",
     "output: ['Twas', 'brillig', 'and']`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4. Odd sum\n",
+    "Sum the values of only the odd integers from one number to another, inclusively.\n",
+    "\n",
+    "\n",
+    "Test input: `1, 57`\n",
+    "\n",
+    "Example:\n",
+    "\n",
+    "`input: 10, 25\n",
+    "output: 144`"
    ]
   },
   {
